--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-12
     name: A job to run test in FreeBSD
     env:
       MYTOKEN : ${{ secrets.MYTOKEN }}
